corpus/cpp/constexpr/case-01/snapshots/gcc15/dual_sink_structured/render.concise.txt
error: [constexpr] compile-time evaluation failure @ src/main.cpp:1:15
help: ensure all expressions and function calls in the constexpr context are constant-evaluable
raw : static assertion failed: int size mismatch
| src/main.cpp:1:15
| static_assert(sizeof(int) == 1, "int size mismatch");
|               ^
note: the comparison reduces to '(4 == 1)'
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output